# multivers-fork

./: .gitignore  README.md  data.sh  get_checkpoint.py  main.py  predict.py  pyproject.toml  run.sh
checkpoints/: longformer.sh
model/: allennlp_nn_util.py  data.py  metrics.py  model.py  util.py
multivers_fork.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
