[project]
name = "multivers-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.9,<3.12"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn>=1.0",

    "torch==2.8.0",
    "lightning==2.5",
    "torchvision",
    "torchmetrics>=0.7.0",
    "setuptools>=65,<70", # misc: required for torchmetrics

    "transformers",
    "tokenizers",
    "datasets",

    "Cython",
    "tqdm",
    "pytz",

    "openai",

    "spacy",
    "scispacy",

]

[build-system]
requires = [
    "setuptools>=65,<70",
    "wheel>=0.37"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
package = true
no-build-isolation-package = ["scikit-learn", "scipy", "spacy"]
override-dependencies = []


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true